kubernetes/istio-1.25.1/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: prod
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            prefix: /api/tasks
      route:
        - destination:
            host: backend.prod.svc.cluster.local
            subset: v1
            port:
              number: 5000
          weight: 90
        - destination:
            host: backend.prod.svc.cluster.local
            subset: v2
            port:
              number: 5000
          weight: 10
      retries:
        attempts: 3
        perTryTimeout: 2s
